# attention_map_warwaw_ai_hackathon

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DESIGN.md  FRONTEND_SPEC.md  SPECIFICATION.md  docker-compose.yml  pyrightconfig.json
.serena/: project.yml
.serena/memories/: project-context.md  session-brainstorm-and-design.md  session-checkpoint-spec-complete.md  session-frontend-implementation.md  session-frontend-spec-complete.md  session-phase4-complete.md
backend/: Dockerfile  IMPLEMENTATION_PLAN.md  __init__.py  conftest.py  manage.py  pyproject.toml
backend/api/: auth.py  routes.py  schemas.py  streaming.py  tests.py
backend/attention_map/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  models.py  tests.py
backend/core/migrations/: 0001_initial.py  0002_alter_eventcluster_options.py  0003_add_transcription_field.py
backend/services/: __init__.py  classification.py  clustering.py  gamification.py  keyframe.py  processing.py  storage.py  tests.py  transcription.py
backend/tasks/: __init__.py  processing.py  tests.py
frontend/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
frontend/e2e/: auth.spec.js  dashboard.spec.js  navigation.spec.js
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js
frontend/src/components/Dashboard/: EventFeed.jsx  FilterBar.jsx  StatsWidgets.jsx
frontend/src/components/Map/: EventMap.jsx  EventMarker.jsx  LocationPicker.jsx
frontend/src/components/layout/: Header.jsx  (+1 more)
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAuth.js  useEvents.js  useGeolocation.js  useSSE.js  useTheme.js
frontend/src/lib/: constants.js  queryClient.js  utils.js
frontend/src/pages/: DashboardPage.jsx  EventDetailPage.jsx  LeaderboardPage.jsx  LoginPage.jsx  LoginPage.test.jsx  ProfilePage.jsx  RegisterPage.jsx  RegisterPage.test.jsx  UploadPage.jsx
frontend/src/test/: setup.js  utils.jsx
frontend/src/utils/: date.js
scripts/: check-root-files.sh
(+15 files in other folders)
